# liz

./: liz.cabal  possibles.md  test.liz  todo.md
app/: Main.hs  Parser.hs
app/Liz/: Codegen.hs  Error.hs  IR.hs  Parser.hs  Sema.hs
app/Liz/Codegen/: QBE.hs  QBEGen.hs
app/Liz/Common/: Error.hs  Errors.hs  Logging.hs  Types.hs
app/Liz/IR/: IR.hs  IRGen.hs  IRTypes.hs
app/Liz/QBE/: QBE.hs
app/Liz/Sema/: Macro.hs  Sema.hs  Terminators.hs  Typecheck.hs
app/Liz/Util/: Stack.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: helloworld.liz
test/: Main.hs
test/Liz/: ParserSpec.hs  SemaSpec.hs
