cabal-version:      3.0
name:               liz
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE
author:             scheinheiser
maintainer:         ..
build-type:         Simple

common warnings
    ghc-options: -Wall

executable liz
    import:           warnings
    main-is:          Main.hs
    other-modules: Liz.Parser
      , Liz.Common.Types
      , Liz.Common.Errors
      , Liz.Common.Logging
      , Liz.Sema.Typecheck
      , Liz.Sema.Macro
      , Liz.Sema.Terminators
      , Liz.Codegen
      , Liz.IR.IR
      , Liz.IR.IRTypes
      , Liz.QBE.QBE
    other-extensions: OverloadedStrings
      , NamedDefaults
      , RecordWildCards
      , NamedFieldPuns
      , OrPatterns
    build-depends: base ^>=4.21.0.0
      , megaparsec >= 9.6.0
      , text >= 2.1
      , containers >= 0.5.9
      , safe-coloured-text == 0.3.*
      , prettyprinter == 1.7.*
    hs-source-dirs:   app
    default-language: GHC2024

test-suite liz-test
    import:           warnings
    default-language: GHC2024
    other-modules: Liz.Parser
      , Liz.ParserSpec
      , Liz.Sema.Typecheck
      , Liz.Sema.Macro
      , Liz.Sema.Terminators
      , Liz.Codegen
      , Liz.IR.IR
      , Liz.IR.IRTypes
      , Liz.QBE.QBE
      , Liz.SemaSpec
      , Liz.Common.Errors
      , Liz.Common.Logging
      , Liz.Common.Types
    other-extensions: OverloadedStrings, MultilineStrings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          Spec.hs
    build-depends: base ^>=4.21.0.0
      , hspec >= 2.11.0
      , hspec-megaparsec >= 2.0.0
      , megaparsec >= 9.6.0
      , text >= 2.1
      , containers >= 0.5.9
      , safe-coloured-text == 0.3.*
      , prettyprinter == 1.7.*
    build-tool-depends: hspec-discover:hspec-discover == 2.*
